--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 					<path>/TccTool</path>
 				</configuration>
 			</plugin>
+			<plugin>
+		        <groupId>org.sonarsource.scanner.maven</groupId>
+		        <artifactId>sonar-maven-plugin</artifactId>
+		        <version>3.5.0.1254</version>
+      		</plugin>
 		</plugins>
 	</build>
 
