--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,11 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
+					<url>http://localhost:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<path>/TccTool</path>
+					<username>admin</username>
+					<password>password</password>
 				</configuration>
 			</plugin>
 			<plugin>
